# spade

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  add_changelog  mergelog.toml  pre-commit  release.sh
spade-ast/: Cargo.toml
spade-ast-lowering/: Cargo.toml
spade-ast-lowering/src/: attributes.rs  auto_traits.rs  builtins.rs  data_requirements.rs  error.rs  global_symbols.rs  impls.rs  lambda.rs  lib.rs  pipelines.rs  testutil.rs  type_alias.rs  type_level_if.rs  types.rs
spade-ast/src/: lib.rs  testutil.rs  token.rs
spade-common/: Cargo.toml
spade-common/src/: cloning_rwlock.rs  doc_links.rs  id_tracker.rs  interning.rs  lib.rs  loc_map.rs  location_info.rs  name.rs  namespace.rs  sizes.rs
spade-compiler/: Cargo.toml
spade-compiler/core/: conv.spade  core.spade  macros.spade  main.spade  marker.spade  ops.spade  ports.spade  prelude.spade  undef.spade
spade-compiler/prelude/: prelude.spade
spade-compiler/src/: compiler_state.rs  error_handling.rs  lib.rs  main.rs  name_dump.rs  namespaced_file.rs
spade-compiler/stdlib/: array.spade  cdc.spade  conv.spade  default.spade  io.spade  main.spade  mem.spade  num.spade  ops.spade  option.spade  ports.spade  prelude.spade  undef.spade
spade-diagnostics/: Cargo.toml
spade-diagnostics/src/: diag_list.rs  diagnostic.rs  lib.rs
spade-diagnostics/src/emitter/: codespan_emitter.rs  mod.rs
spade-diagnostics/src/snapshots/: spade_diagnostics__tests__bug_diagnostics_works.snap
spade-hir/: Cargo.toml
spade-hir-lowering/: Cargo.toml
spade-hir-lowering/src/: const_generic.rs  error.rs  error_reporting.rs  inline.rs  lib.rs  monomorphisation.rs  name_map.rs  pattern.rs  pipelines.rs  statement_list.rs  substitution.rs
spade-hir-lowering/src/affine_check/: affine_state.rs  error.rs  mod.rs
spade-hir-lowering/src/linear_check/: linear_state.rs  mod.rs
spade-hir-lowering/src/passes/: disallow_inout_bindings.rs  disallow_zero_size.rs  flatten_regs.rs  lower_lambda_defs.rs  lower_methods.rs  lower_type_level_if.rs  mod.rs  pass.rs
spade-hir/src/: auto_traits.rs  expression.rs  impl_tab.rs  lib.rs  param_util.rs  pretty_debug.rs  pretty_print.rs  query.rs  symbol_table.rs  testutil.rs
spade-language-server/: .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml
spade-language-server/src/: backend.rs  compile.rs  completion.rs  goto_definition.rs  hover.rs  keywords.rs  language_server.rs  main.rs  mod.rs  util.rs
spade-language-server/src/backend_capabilities/: completion.rs  goto_definition.rs  hover.rs  mod.rs  spade_symbol.rs  util.rs
spade-language-server/src/completion/: locals.rs  mod.rs  naked.rs
spade-language-server/src/tests/: completion.rs  completions.rs  diagnostics.rs  goto_definition.rs  hover.rs  markers.rs  mod.rs  utils.rs
spade-language-server/src/tests/snapshots/: spade_language_server__tests__completion__bare_completion.snap  spade_language_server__tests__completion__broken_match_statements_dont_break_subsequent.snap  spade_language_server__tests__completion__broken_match_statements_dont_break_subsequent.snap.new  spade_language_server__tests__completion__broken_match_statements_dont_break_subsequent2.snap  spade_language_server__tests__completion__broken_match_statements_dont_break_subsequent2.snap.new  spade_language_server__tests__completion__check_completion.snap  spade_language_server__tests__completion__completion_adds_inst_correctly.snap  spade_language_server__tests__completion__completion_adds_inst_correctly.snap.new  spade_language_server__tests__completion__completion_after_dot.snap  spade_language_server__tests__completion__completion_after_dot.snap.new  spade_language_server__tests__completion__completion_on_blank_dot.snap  spade_language_server__tests__completion__completion_on_blank_dot_not_in_target.snap  spade_language_server__tests__completion__completion_on_field_not_in_target.snap  spade_language_server__tests__completion__completion_on_in_progress_field.snap  spade_language_server__tests__completion__dot_completion_does_not_double_fill_inst.snap  spade_language_server__tests__completion__dot_completion_does_not_double_fill_pipeline_inst.snap  spade_language_server__tests__completion__dot_completion_runs_on_next_line.snap  spade_language_server__tests__completion__enum_variants_are_path_completed.snap  spade_language_server__tests__completion__enum_variants_are_path_completed_in_incomplete_contexts.snap  spade_language_server__tests__completion__enum_variants_are_path_completed_in_incomplete_contexts2.snap  spade_language_server__tests__completion__enum_variants_are_path_completed_in_incomplete_match_statements.snap  spade_language_server__tests__completion__in_function_call.snap  (+22 more)
spade-mir/: Cargo.toml
spade-mir/src/: aliasing.rs  assertion_codegen.rs  diff.rs  diff_printing.rs  enum_util.rs  eval.rs  lib.rs  macros.rs  renaming.rs  type_list.rs  types.rs  unit_name.rs  verilator_wrapper.rs  wal.rs
spade-mir/src/codegen/: mod.rs  util.rs
spade-mir/src/passes/: auto_clock_gating.rs  deduplicate_mut_wires.rs  mod.rs  split_compound_regs.rs
spade-parser/: Cargo.toml
spade-parser/src/: error.rs  expression.rs  items.rs  lexer.rs  lib.rs  statements.rs
spade-python/: Cargo.toml  pyproject.toml
spade-python/python/spade/: __init__.py
spade-python/src/: lib.rs
spade-query/: Cargo.toml
spade-query/src/: lib.rs
spade-surfer-plugin/: Cargo.toml  install.bash
spade-surfer-plugin/src/: lib.rs
spade-typeinference/: Cargo.toml
spade-typeinference/src/: constraints.rs  dump.rs  equation.rs  error.rs  expression.rs  fixed_types.rs  lib.rs  method_resolution.rs  mir_type_lowering.rs  obligations.rs  pipeline.rs  replacement.rs  requirements.rs  shared.rs  testutil.rs  trace_stack.rs  traits.rs
spade-types/: Cargo.toml
spade-types/src/: lib.rs  meta_types.rs
tools/spadedoc/: .gitmodules  Cargo.toml  README.md  askama.toml  build.rs  main.spade  primitives.spade
tools/spadedoc/src/: djot.rs  errors.rs  generate.rs  html.rs  impls.rs  impls_n_docs.rs  item.rs  lib.rs  main.rs  print.rs  renderer.rs  styles.css
(+1025 files in other folders)
