[workspace]

members = [
    "spade-*",
    "vcd-translate",
]

resolver = "2"

# Shared between internal crates. Can be overridden per-crate if needed.

[workspace.package]
version = "0.12.1"
license = "EUPL-1.2"
edition = "2021"
rust-version = "1.70" # is_terminal is stable from 1.70

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.1"
spade-codespan = {version = "0.12.0", features = ["serde"]}
spade-codespan-reporting = {version = "0.12.0", features = ["serde"]}
colored = "3.0"
indoc = "2.0"
insta = "1.14.0"
itertools = "0.14"
local-impl = "0.1.2"
logos = "0.15.0"
num = {version = "0.4.0", features = ["serde"]}
pretty_assertions = "1.4.1"
prettydiff = { version = "0.8", default-features = false }
pyo3 = { version = "0.21.2", features = ["extension-module", "eyre", "abi3-py38"] }
ron = {version = "0.8.0", features=["integer128"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.117"
tap = "1.0.1"
thiserror = "2.0.11"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.4"
