[workspace]

members = [
    "spade-*",
    "vcd-translate",
    "tools/spadedoc"
]

resolver = "2"

# Shared between internal crates. Can be overridden per-crate if needed.

[workspace.package]
version = "0.15.0"
license = "EUPL-1.2"
edition = "2021"
rust-version = "1.88"
readme = "README.md"
homepage = "https://spade-lang.org"
repository = "https://gitlab.com/spade-lang/spade"

[workspace.dependencies]
spade-ast = {path = "spade-ast", version = "0.15.0"}
spade-ast-lowering = {path = "spade-ast-lowering", version = "0.15.0"}
spade-common = {path = "spade-common", version = "0.15.0"}
spade-diagnostics = { path = "spade-diagnostics" , version = "0.15.0"}
spade-hir = {path = "spade-hir", version = "0.15.0"}
spade-hir-lowering = {path = "spade-hir-lowering", version = "0.15.0"}
spade-macros = {path = "spade-macros", version = "0.15.0"}
spade-mir = {path = "spade-mir", version = "0.15.0"}
spade-parser = {path = "spade-parser", version = "0.15.0"}
spade-typeinference = {path = "spade-typeinference", version = "0.15.0"}
spade-types = {path = "spade-types", version = "0.15.0"}

bincode = { version = "2.0.0", features = ["serde"] }
bumpalo = { version = "3.14.0" }
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.1"
spade-codespan = {version = "0.12.0", features = ["serde"]}
spade-codespan-reporting = {version = "0.12.0", features = ["serde"]}
colored = "3.0"
imbl = {version = "6.1.0", features = ["serde"]}
indoc = "2.0"
insta = "1.14.0"
itertools = "0.14"
local-impl = "0.1.2"
logos = "0.16.0"
num = {version = "0.4.0", features = ["serde"]}
pretty_assertions = "1.4.1"
prettydiff = { version = "0.9", default-features = false }
pyo3 = { version = "0.21.2", features = ["extension-module", "eyre", "abi3-py38"] }
recursive = {version = "0.1.1"}
ron = {version = "0.12.0", features=["integer128"]}
fastrand = {version = "2.3.0"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.117"
tap = "1.0.1"
thiserror = "2.0.11"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-tree = "0.4"
rustc-hash = "2.1"

[profile.release]
codegen-units=1
# lto="fat"
