[package]
name = "spade-ast-lowering"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helper crate for https://spade-lang.org/"
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
itertools.workspace = true
local-impl.workspace = true
num.workspace = true
rustc-hash.workspace = true
recursive.workspace = true
tracing.workspace = true

spade-ast.workspace = true
spade-common.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-macros.workspace = true
spade-types.workspace = true

[dev-dependencies]
# spade-testutil = {path = "../spade-testutil"}
pretty_assertions.workspace = true
matches = "0.1"
