[package]
name = "spade-common"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helper crate for https://spade-lang.org/"
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
spade-codespan = {version = "0.12.0", features = ["serialization"]}
spade-codespan-reporting = {version = "0.12.0", features = ["serde"]}
logos.workspace = true
rustc-hash.workspace = true
serde.workspace = true
num.workspace = true
