[package]
name = "spade-lang"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
readme.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "The Spade compiler"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "spade"
path = "src/main.rs"

[lib]
name = "spade"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
spade-codespan-reporting.workspace = true
spade-codespan.workspace = true
color-eyre.workspace = true
colored.workspace = true
indoc.workspace = true
itertools.workspace = true
logos.workspace = true
postcard.workspace = true
ron.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tracing.workspace = true
rayon.workspace = true

serde_json = "1.0.117"

spade-ast.workspace = true
spade-ast-lowering.workspace = true
spade-common.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-hir-lowering.workspace = true
spade-macros.workspace = true
spade-mir.workspace = true
spade-parser.workspace = true
spade-typeinference.workspace = true
spade-types.workspace = true

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), target_env = "gnu"))'.dependencies]
tikv-jemallocator = "0.6.1"

[dev-dependencies]
prettydiff.workspace = true
pretty_assertions.workspace = true
