[package]
name = "spade-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
spade-codespan.workspace = true
spade-codespan-reporting.workspace = true
itertools.workspace = true

spade-common = {path = "../spade-common"}

[dev-dependencies]
insta.workspace = true
