[package]
name = "spade-hir-lowering"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Helper crate for https://spade-lang.org/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
itertools.workspace = true
local-impl.workspace = true
num.workspace = true
serde.workspace = true
tracing.workspace = true
rayon.workspace = true
rustc-hash.workspace = true

spade-common.workspace = true
spade-diagnostics .workspace = true
spade-hir.workspace = true
spade-mir.workspace = true
spade-typeinference.workspace = true
spade-types.workspace = true
# spade-wordlength-inference.workspace = true

[dev-dependencies]
prettydiff.workspace = true
pretty_assertions.workspace = true
colored.workspace = true
