[package]
name = "spade-hir"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helper crate for https://spade-lang.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored.workspace = true
itertools.workspace = true
num.workspace = true
serde.workspace = true
tap.workspace = true
tracing.workspace = true

spade-common.workspace = true
spade-diagnostics.workspace = true
spade-types.workspace = true
