[package]
name = "spade-language-server"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.77.1"

[dependencies]
spade-lang.workspace = true
spade-common.workspace = true
spade-types.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-codespan.workspace = true
spade-typeinference.workspace = true
spade-query.workspace = true
swim = { git = "https://gitlab.com/spade-lang/swim.git", rev = "f5af670a2af5f0d96475ef4746d178ec47809aab" }


async-recursion = "1.1.1"
camino = "1.1.1"
spade-codespan-reporting = "0.12.0"
color-eyre = "0.6.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-lsp = "0.20.0"
itertools.workspace = true
indoc.workspace = true
rustc-hash.workspace = true

[target.'cfg(all(any(target_os = "linux", target_os = "macos")))'.dependencies]
tikv-jemallocator.workspace = true

[dev-dependencies]
assert_fs = "1.1.1"
spade-codespan = "0.12.0"
regex = "1.10.5"
smart-default = "0.7.1"
tap = "1.0.1"
prettydiff.workspace = true
insta = "1.43.1"
owo-colors = "4.2.1"
