[package]
name = "spade-mir"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helper crate for https://spade-lang.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
spade-codespan-reporting.workspace = true
derive-where = "1.2.7"
indoc.workspace = true
itertools.workspace = true
nesty = "0.2"
num.workspace = true
serde.workspace = true

spade-common.workspace = true
spade-diagnostics.workspace = true

[dev-dependencies]
colored.workspace = true
spade-codespan.workspace = true
prettydiff.workspace = true
pretty_assertions.workspace = true
