[package]
name = "spade-parser"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Helper crate for https://spade-lang.org/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
spade-codespan.workspace = true
colored.workspace = true
local-impl.workspace = true
logos.workspace = true
tracing.workspace = true
num.workspace = true
itertools.workspace = true

spade-ast.workspace = true
spade-common.workspace = true
spade-diagnostics.workspace = true
spade-macros.workspace = true
