[build-system]
requires = ["maturin>=1.8.2,<2.0.0"]
build-backend = "maturin"

[project]
name = "spade"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cocotb~=1.9.2", "ansicolors>=1.1.8"]

[tool.maturin]
python-source = "python"
