[package]
name = "spade-typeinference"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helper crate for https://spade-lang.org/"
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored.workspace = true
itertools.workspace = true
num.workspace = true
serde.workspace = true
tracing.workspace = true

spade-common.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-macros.workspace = true
spade-types.workspace = true

[dev-dependencies]
spade-ast = {path = "../spade-ast"}
assert_matches = "1.5"
spade-ast-lowering = {path = "../spade-ast-lowering"}
