[package]
name = "spade-types"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helper crate for https://spade-lang.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde.workspace = true
num.workspace = true

spade-common.workspace = true
