[package]
name = "spadedoc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.0.0"
#askama = "0.12.1"
rinja = { features = [
  "code-in-doc",
], git = "https://github.com/rinja-rs/rinja", rev = "c3fac0ca99579dd2ad73f53c231e56a7dd1c0074" }
camino = "1.1.2"
spade-codespan-reporting.workspace = true
color-eyre = "0.6.1"
pathdiff = { version = "0.2.1", features = ["camino"] }
pulldown-cmark = "0.13.0"
rustc-hash.workspace = true
spade-lang = { path = "../../spade-compiler/" }
spade-common.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-types.workspace = true
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = { git = "https://github.com/jonathanmorley/tracing-tree", rev = "8b97ec6e50e3f755644d1a0aaf4c45a2112607b2" }
local-impl = "0.1.2"
argh = "0.1.13"
