[package]
name = "spadedoc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.1.2"
askama = { version = "0.15.1", features = ["code-in-doc"] }
camino = "1.1.2"
spade-codespan-reporting.workspace = true
color-eyre = "0.6.1"
pathdiff = { version = "0.2.1", features = ["camino"] }
pulldown-cmark = "0.13.0"
rustc-hash.workspace = true
spade-lang = { path = "../../spade-compiler/" }
spade-common.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-types.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tree.workspace = true
local-impl = "0.1.2"
argh = "0.1.13"
