[package]
name = "spadedoc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.1.2"
camino = "1.1.2"
spade-codespan-reporting.workspace = true
color-eyre = "0.6.1"
itertools = "0.14.0"
rustc-hash.workspace = true
spade-lang = { path = "../../spade-compiler/" }
spade-common.workspace = true
spade-diagnostics.workspace = true
spade-hir.workspace = true
spade-types.workspace = true
spade-ast.workspace = true
spade-ast-lowering.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tree.workspace = true
local-impl = "0.1.2"
argh = "0.1.13"
jotdown = "0.9.1"
